<resources>
    <string name="app_name">Bim Chat</string>
    <string name="welcome_txt">Register Here</string>
    <string name="name_txt">User Name</string>
    <string name="number_txt">Mobile Number</string>
    <string name="email_txt">Email Address</string>
    <string name="register_txt">Register Now</string>
    <string name="message_title">Messages</string>
    <string name="send_txt">Type Message…</string>
    <string name="status">Online</string>
</resources>