<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/bg_color"
tools:context=".Register">

    <TextView
        android:textColor="@color/txt_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/welcome_txt"/>

    <EditText
        android:textColor="@color/txt_color"
        android:id="@+id/r_name"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_10"
        android:layout_height="50dp"
        android:hint="@string/name_txt"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"/>

    <EditText
        android:textColor="@color/txt_color"
        android:id="@+id/r_mobile"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_10"
        android:layout_height="50dp"
        android:hint="@string/number_txt"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"/>

    <EditText
        android:textColor="@color/txt_color"
        android:id="@+id/r_email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_10"
        android:layout_height="50dp"
        android:hint="@string/email_txt"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/r_registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/register_txt"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/round_back_theme_1000"/>

</LinearLayout>