<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.Chat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:paddingStart="12dp"
            android:paddingEnd="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/back_btn"
            android:src="@drawable/user_icon"
            android:background="@color/tb_color" />

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/profilePic">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/name_txt"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:background="@color/theme_color_80">

        <EditText
            android:id="@+id/message_txt"
            android:layout_toStartOf="@id/send_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:textSize="14sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="20sp"
            android:hint="@string/send_txt"/>

        <ImageView
            android:id="@+id/send_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            app:srcCompat="@android:drawable/ic_menu_send"/>

    </RelativeLayout>

</RelativeLayout>